// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shareable configs should export proper "angular" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "warn",
  },
}
`;

exports[`shareable configs should export proper "react" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "warn",
  },
}
`;

exports[`shareable configs should export proper "recommended" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/no-await-sync-query": "error",
  },
}
`;

exports[`shareable configs should export proper "vue" config 1`] = `
Object {
  "plugins": Array [
    "testing-library",
  ],
  "rules": Object {
    "testing-library/await-async-query": "error",
    "testing-library/no-await-sync-query": "error",
    "testing-library/no-debug": "warn",
  },
}
`;
